--- a/Parallax/CSS/style.css
+++ b/Parallax/CSS/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
+
 html, body {
     margin: 0;
-    font: 16px "Lato", sans-serif;
+    font: 16px "Caveat", sans-serif;
     color: #777;
     /* O height também tem importancia ao parallax */
     height: 100%;
